Fix hoverstate for goodreads book covers

--- a/src/assets/theming/_base.scss
+++ b/src/assets/theming/_base.scss
@@ -469,7 +469,7 @@ blockquote {
 
 .gr_grid_book_container:hover {
   transform: translateY(-0.5em);
-  filter: saturate(1.3);
+  filter: saturate(1.2);
   transition: all ease-in-out 0.3s;
   box-shadow: 0 0 12px var(--text-color);
 }
